updating contact image

--- a/css/AS.css
+++ b/css/AS.css
@@ -98,7 +98,7 @@ section#projects {
 }
 
 section#contact {
-    background: url('/E-Portfolio/bg.png') no-repeat center center/cover;;
+    background: url('https://ashwaq60.github.io/images/bg.png') no-repeat center center/cover;;
 
 }
 .button {
