updating rest of images

--- a/css/AS.css
+++ b/css/AS.css
@@ -80,7 +80,7 @@ section p {
 }
 
 section#AS {
-  background: url('/E-Portfolio/PL.png') no-repeat center center/cover;;
+  background: url('https://ashwaq60.github.io/images/PL.png') no-repeat center center/cover;;
 }
 
 section#home {
@@ -90,7 +90,7 @@ section#home {
 }
 
 section#aboutme {
-  background: url('/E-Portfolio/5bg.jpeg') no-repeat center center/cover;;
+  background: url('https://ashwaq60.github.io/images/5bg.jpeg') no-repeat center center/cover;;
 }
 
 section#projects {
