--- a/css/AS.css
+++ b/css/AS.css
@@ -81,6 +81,9 @@ section p {
 
 section#AS {
   background: url('https://ashwaq60.github.io/images/PL.png') no-repeat center center/cover;;
+  width: auto ;
+  max-width: 100% ;
+  height: auto ;
 }
 
 section#home {
